# uceasy

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  noxfile.py  phyluce-environment.yaml  pyoxidizer.bzl  pyproject.toml  requirements.txt  run_tests.sh  setup.py  test_uceasy.py  tox.ini
.circleci/: config.yml
.github/workflows/: coverage.yml  main.yaml
adapter/: __init__.py  assembly.py  quality_control.py
adapters/: __init__.py  assembly.py  quality_control.py  uce_processing.py
cli/: uceasy_cli.py
controller/: __init__.py  env_manager.py  phyluce_facade.py
docs/: index.html
docs/css/: style.css
facade/: __init__.py  phyluce_controller.py  phyluce_facade.py  quality_control.py  trinity.py
facade/templates/: assembly.txt
phyluce_facade/: __init__.py  assembly.py  phyluce_controller.py  quality_control.py
phyluce_facade/templates/: illumiprocessor.txt
sample/: alligator_sheet.csv  assembly.conf  illumiprocessor.conf  sample_sheet.csv
sample/clean_fastq/sample0/: adapters.fasta
src/uceasy/: __init__.py  adapters.py  console.py  context.py  facade.py  ioutils.py  operations.py  run.py  tracking.py
src/uceasy/cli/: uceasy_cli.py
src/uceasy/use_cases/: uce_phylogenomics.py
testdata/: illumiprocessor.conf  probes.fasta  sample_sheet.csv  sheet.csv  taxon-set.conf
testdata/clean-fastq/alligator_mississippiensis_GGAGCTATGG/: adapters.fasta
testdata/clean-fastq/anolis_carolinensis/: adapters.fasta
testdata/spades-assemblies/anolis_carolinensis_spades/: assembly_graph_with_scaffolds.gfa  contigs.paths  dataset.info  input_dataset.yaml  params.txt  run_spades.sh  run_spades.yaml  scaffolds.paths
testdata/spades-assemblies/contigs/: anolis_carolinensis.contigs.fasta  gallus_gallus.contigs.fasta  mus_musculus.contigs.fasta
testdata/spades-assemblies/gallus_gallus_spades/: params.txt  (+6 more)
tests/: __init__.py  conftest.py  test_adapters.py  test_assemblers.py  test_assembly.py  test_console.py  test_env_manager.py  test_facade.py  test_illumiprocessor.py  test_interactor.py  test_ioutils.py  test_operations.py  test_phyluce_commands.py  test_quality_control.py  test_simple.py  test_uce_processing.py  test_uceasy.py  test_uceasy_cli.py
tests/integration/: test_facade.py
tests/unit/: test_assemblers.py  test_env_manager.py  test_illumiprocessor.py  test_interactor.py  test_uce_phylogenomics.py  test_uce_processor.py
uceasy/: __init__.py  adapters.py  context.py  interactor.py  ioutils.py  views.py
uceasy/adapters/: __init__.py  assembly.py  quality_control.py  uce_processing.py  uce_processor.py
uceasy/cli/: uceasy_cli.py
uceasy/controller/: env_manager.py  facade.py  phyluce_facade.py
uceasy/uce_processors/: uce_phylogenomics.py
uceasy/use_cases/: uce_phylogenomics.py
web/: __init__.py  views.py
web/templates/: index.html
(+25 files in other folders)
