[tool.poetry]
name = "uceasy"
version = "0.2.3"
description = "Wrapper for the Phyluce phylogenomics software package"
authors = ["Caio Raposo <caioraposo@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://uceasy.github.io"
repository = "https://github.com/uceasy/uceasy"
keywords = ["uce", "phyluce", "ultraconserved elements"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
nox = "^2021.6.12"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.12"
codecov = "^2.1"
mypy = "^0.910"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry.scripts]
uceasy = "uceasy.console:cli"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["uceasy"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

