[tool.poetry]
name = "uceasy"
version = "0.2.3"
description = "Wrapper for the Phyluce phylogenomics software package"
authors = ["Caio Raposo <caioraposo@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://uceasy.github.io"
repository = "https://github.com/uceasy/uceasy"
keywords = ["uce", "phyluce", "ultraconserved elements"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
nox = "^2021.6.12"
mypy = "^0.910"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry.scripts]
uceasy = "uceasy.console:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

